enable preview spring boot plugin